# PositronSniperRifle

./: CMakeLists.txt  LICENSE  README.md  bezier.cuh  cudaBuffer.h  deviceHelper.cuh  devicePrograms.cu  disney.cuh  disney.h  main.cpp  material.cuh  mesh.cpp  mesh.h  optixLib.h  pmath.h  renderParams.h  renderer.cpp  renderer.h  shader.hpp  window.h
cuda/: bezier.cuh  deviceHelper.cuh  disney.cuh  material.cuh
include/: cudaBuffer.h  renderParams.h
renderer/: mesh.cpp  mesh.h  shader.hpp  window.h
